--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,11 @@ jobs:
           cache: false
       - name: Install mage
         run: go install github.com/magefile/mage@v1.15.0
-      - name: Run temporary setup target
-        run: mage temp
+      - name: Install our package in editable mode
+        run: pip install -e .
+      - name: Initialize MLflow repo
+        run: mage repo:init
+      - name: Install dependencies
+        run: pip install psycopg2-binary -e .mlflow.repo
       - name: Run integration tests
         run: mage test:python
