Fix Test log inputs with large inputs limit check (#47)
* WIP, return nil for empty strings

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Add some more logging

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Use fork as ref

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Revert temp changes

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Revert python change

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Revert mlflow ref to master

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Remove failing test workaround

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Continue when windows

Signed-off-by: nojaf <florian.verdonck@outlook.com>

* Only on Ubuntu then?

Signed-off-by: nojaf <florian.verdonck@outlook.com>

---------

Signed-off-by: nojaf <florian.verdonck@outlook.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,4 +56,4 @@ jobs:
       - name: Run integration tests
         run: mage test:python
         # Temporary workaround for failing tests
-        continue-on-error: true
+        continue-on-error: ${{ matrix.runner != 'ubuntu-latest' }}
